// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`FormDialogTemplate > renders correctly 1`] = `
<div
  data-v-app=""
>
  
  <dialog-toolbar-stub
    color="white"
    data-v-44323e6a=""
    iconcolor="secondary-text"
    subtitle="string"
    title="string"
    titleicon=""
  />
  <v-card-stub
    border="false"
    class="elevation-0"
    data-v-44323e6a=""
    density="default"
    disabled="false"
    exact="false"
    flat="false"
    hover="false"
    loading="false"
    replace="false"
    ripple="true"
    tag="div"
    tile="false"
    variant="elevated"
  >
    <div
      class="dialog-content"
      data-v-44323e6a=""
    >
      <div
        class="px-3"
        data-v-44323e6a=""
      >
        
        
      </div>
      <!--v-if-->
      <div
        class="px-3"
        data-v-44323e6a=""
      >
        
        
      </div>
    </div>
    <!--v-if-->
  </v-card-stub>
  
</div>
`;

exports[`FormDialogTemplate > renders correctly in mobile view 1`] = `
<div
  data-v-app=""
>
  
  <dialog-toolbar-stub
    color="white"
    data-v-44323e6a=""
    iconcolor="secondary-text"
    subtitle="string"
    title="string"
    titleicon=""
  />
  <v-card-stub
    border="false"
    class="elevation-0"
    data-v-44323e6a=""
    density="default"
    disabled="false"
    exact="false"
    flat="false"
    hover="false"
    loading="false"
    replace="false"
    ripple="true"
    tag="div"
    tile="false"
    variant="elevated"
  >
    <div
      class="dialog-content dialog-content--mobile"
      data-v-44323e6a=""
    >
      <div
        class="px-3"
        data-v-44323e6a=""
      >
        
        
      </div>
      <!--v-if-->
      <div
        class="px-3"
        data-v-44323e6a=""
      >
        
        
      </div>
    </div>
    <!--v-if-->
  </v-card-stub>
  
</div>
`;

exports[`FormDialogTemplate > renders correctly with secondary segment 1`] = `
<div
  data-v-app=""
>
  
  <dialog-toolbar-stub
    color="white"
    data-v-44323e6a=""
    iconcolor="secondary-text"
    subtitle="string"
    title="string"
    titleicon=""
  />
  <v-card-stub
    border="false"
    class="elevation-0"
    data-v-44323e6a=""
    density="default"
    disabled="false"
    exact="false"
    flat="false"
    hover="false"
    loading="false"
    replace="false"
    ripple="true"
    tag="div"
    tile="false"
    variant="elevated"
  >
    <div
      class="dialog-content"
      data-v-44323e6a=""
    >
      <div
        class="px-3"
        data-v-44323e6a=""
      >
        
        
      </div>
      <div
        class="text-center pa-4"
        data-v-44323e6a=""
      >
        <div
          class="text-body-large font-weight-bold"
          data-v-44323e6a=""
          id="secondaty-title"
        >
          secondary title
        </div>
        <div
          class="text-body-medium text-secondary-text position-relative text-align-center full-width"
          data-v-44323e6a=""
          id="secondary-subtitle"
        >
          <span
            class="secondary-segment-title"
            data-v-44323e6a=""
          >
            secondary subtitle
          </span>
          <icon-with-tooltip-stub
            additionalclasses="ml-1 position-absolute"
            color=""
            data-v-44323e6a=""
            icon="M11,9H13V7H11M12,20C7.59,20 4,16.41 4,12C4,7.59 7.59,4 12,4C16.41,4 20,7.59 20,12C20,16.41 16.41,20 12,20M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2M11,17H13V11H11V17Z"
            iconclickedfn="[Function]"
            iconid=""
            iconsrc=""
            size="16"
            tooltiplocation="top"
            tooltiptext="Learn more"
          />
        </div>
      </div>
      <div
        class="px-3"
        data-v-44323e6a=""
      >
        
        
      </div>
    </div>
    <!--v-if-->
  </v-card-stub>
  
</div>
`;
